# MAPF-LNS2_new_destroy_and_repair_operator_SAT

./: .gitignore  CMakeLists.txt  Makefile  README.md  graf_soc.py  lns  log.txt  paths.txt  stats.py  tables.py  test-LNS.csv  test-initLNS.csv  test_output-LNS.csv  test_output-initLNS.csv
build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  log.txt  paths.txt  test-LNS.csv  test-initLNS.csv
build_asan/: Makefile  log.txt  paths.txt  test-LNS.csv  test-initLNS.csv
inc/: BasicLNS.h  InitLNS.h  LNS.h  Log.h  PathTable.h  SATUtils.h  SingleAgentSolver.h
include/: MAPF.hpp
results/: results.csv
results/ost003d-i1-k100-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k100-it2-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k100-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k300-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k300-it2-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k300-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i1-k500-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k100-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k100-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k300-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k300-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i2-k500-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k100-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv
results/ost003d-i3-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k100-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k300-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k300-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i3-k500-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i4-k100-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i4-k100-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i4-k300-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i4-k300-it50-adaptive/: out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i4-k500-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i5-k100-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i5-k100-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i5-k300-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i5-k300-it50-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/ost003d-i5-k500-it15-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i1-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i1-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i2-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i2-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i3-k100-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
results/random-32-32-20-i3-k300-it20-adaptive/: log.txt  out-LNS.csv  out-initLNS.csv  paths.txt
src/: InitLNS.cpp  LNS.cpp  PathTable.cpp  SATUtils.cpp  SingleAgentSolver.cpp  driver.cpp
